# BTL-AnhViet-dictionary

./: CMakeLists.txt  README.md  main.c
file.txt->file.db/: CMakeLists.txt  README.md  main1.c
glade/: window_main.glade  window_main.glade~
pre_fix/: .ninja_deps  .ninja_log  CMakeLists.txt  llist.c  llist.h  prefix.c  prefix.h
pre_fix/b/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  rules.ninja
